[ADD] 학생별 평균 점수 조회 컨트롤러 테스트 코드 작성